--- a/config/database.yml
+++ b/config/database.yml
@@ -5,21 +5,36 @@
 #   gem 'sqlite3'
 #
 default: &default
-  adapter: sqlite3
+  #adapter: sqlite3
+  adapter: postgresql
+  encoding: unicode
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-  timeout: 5000
+  #timeout: 5000
 
 development:
   <<: *default
-  database: db/development.sqlite3
+  #database: db/development.sqlite3
+  database: fish_in_sight_development
+  host: localhost
+  port: 5432
+  user: test
+  password: test
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: db/test.sqlite3
+  #database: db/test.sqlite3
+  database: fish_in_sight_test
+  host: localhost
+  port: 5432
+  user: test
+  password: test
+
 
 production:
   <<: *default
-  database: db/production.sqlite3
+  #database: db/production.sqlite3
+  url: <%= ENV['MY_APP_DATABASE_URL'] %>
+  #database: fish_in_sight_production
